[package]
name = "nine-dragons"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nine_dragons"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
bytemuck = { version = "1.7", features = ["derive"] }
anchor-spl = { version = "0.30.0", features = ["metadata"] }
hex = "0.4.3"
solana-program = "=1.18.15"
